--- a/blocks/card.css
+++ b/blocks/card.css
@@ -35,6 +35,10 @@
   font-weight: 500;
   line-height: 24px;
   text-align: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 353px;
 }
 
 .card__like-button {
@@ -43,4 +47,7 @@
   height: 20px;
   border: none;
   opacity: 40%;
+}
+
+@media screen and (max-width: 627px) {
 }
