--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -11,6 +11,7 @@
   margin: auto 20px;
   height: 190px;
   width: 190px;
+  margin-bottom: 20px;
 }
 
 .profile__name {
@@ -21,6 +22,12 @@
   font-weight: 500;
   line-height: 1;
   text-align: left;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__description {
@@ -35,6 +42,12 @@
   font-weight: 500;
   line-height: 16px;
   text-align: left;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__edit-btn {
@@ -49,6 +62,7 @@
   gap: 8px;
   border-radius: 90px 0px 0px 0px;
   opacity: 0.7px;
+  padding-top: 112px;
 }
 
 .profile__add-btn {
@@ -64,6 +78,9 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 16px;
+  align-self: flex-end;
+  margin-left: auto;
+  margin-bottom: 20px;
 }
 
 .profile__pencil {
@@ -79,46 +96,82 @@
 
 @media screen and (max-width: 627px) {
   .profile {
+    width: 288px;
+    height: 274px;
+    display: flex;
     flex-direction: column;
     max-width: 288px;
     align-items: center;
     text-align: center;
     padding-top: 20px;
+    font-family: "Poppins", "noto-sans", sans-serif;
   }
 
   .profile__avatar {
     margin-right: 0%;
     height: 80px;
     width: 80px;
-    margin: 0 0 12px;
-    padding-top: 20px;
+    margin: 0;
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    width: 80px;
+    height: 80px;
   }
 
   .profile__column {
     margin: 0%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
 
   .profile__name {
     font-size: 20px;
     width: 288px;
     height: 20px;
-    margin-bottom: 6px;
+    margin: 0;
+    padding-top: 12px;
     text-align: center;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    width: 288px;
+    height: 20px;
   }
 
   .profile__description {
-    margin: 0 0 32px;
+    margin: 0;
+    text-align: center;
+    padding-top: 6px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    max-width: 288px;
+    height: 16px;
   }
 
-  .profile__edit-btn .profile__column {
+  .profile__edit-btn {
     display: flex;
     align-items: center;
     text-align: center;
+    justify-content: center;
+    height: 16px;
+    width: 107px;
+    padding-top: 32px;
+  }
+
+  .profile__pencil {
+    margin: 0%;
   }
 
   .profile__add-btn {
-    margin: 20px 0 0;
+    margin-bottom: 20px;
+    width: 100%;
   }
 }
