--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -5,12 +5,12 @@
 .cards__list {
   display: grid;
   grid-template-columns: repeat(auto-fit, 413px);
-  grid-template-rows: repeat(auto-fit, auto);
-  gap: 40px 20px;
+  grid-template-rows: repeat(2, 3fr);
   margin: 0;
   padding: 0;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
   justify-content: center;
+  gap: 40px 20px;
 }
 
 @media screen and (max-width: 627) {
@@ -18,20 +18,42 @@
     font-family: "Poppins", "noto-sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
-    line-height: 16px;
+    line-height: 1;
     text-align: left;
     width: 95px;
     height: 16px;
   }
 
-  .cards-img {
+  .cards__list {
+    margin: auto;
+    padding: 0;
+    border-top: 1px rgba(33, 33, 33, 0.4) solid;
     width: 288px;
     height: 2028px;
     top: 360px;
     left: 16px;
     padding: 0px 0px 20px 0px;
+    gap: 0;
+    border: 0px 0px 1px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 228px;
+  }
+
+  .cards-img {
+    display: grid;
+    grid-template-columns: repeat(1, 228px);
+    grid-template-rows: repeat(1, 1fr);
+    width: 288px;
+    height: 228px;
+    top: 360px;
+    left: 16px;
+    padding: 0;
+    margin: 0;
     gap: 20px;
     border: 0px 0px 1px 0px;
-    opacity: 0px;
+    background-color: #fff;
   }
 }
