--- a/blocks/card.css
+++ b/blocks/card.css
@@ -19,13 +19,14 @@
   display: block;
 }
 .card__content {
-  width: 100%;
   margin: 0%;
   padding: 0%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   background-color: #fcf5e5;
+  max-width: 353px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 413px;
 }
 
 .card__title {
@@ -33,12 +34,14 @@
   background-color: #fcf5e5;
   font-size: 20px;
   font-weight: 500;
-  line-height: 24px;
+  line-height: 1.2;
   text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 353px;
+  background-color: #fcf5e5;
+  margin: 0;
+  padding: 0%;
 }
 
 .card__like-button {
@@ -50,4 +53,50 @@
 }
 
 @media screen and (max-width: 627px) {
+  .card {
+    margin: 0;
+    background-color: #f8f9fa;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 228px;
+  }
+
+  .card__content {
+    width: 288px;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 12px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .card-img {
+    height: 228px;
+    width: 228px;
+    padding: 0;
+    margin: 0;
+    background-color: #f8f9fa;
+  }
+
+  .card__title {
+    margin: 0;
+    font-family: "poppins", "noto-sans", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+    text-align: left;
+    padding: 0;
+  }
+
+  .card__like-button {
+    background-image: url(../images/Union.svg);
+    border: none;
+    opacity: 40%;
+    margin: 0;
+    padding: 0;
+  }
 }
