--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -15,7 +15,7 @@
   padding: 60px 668px;
   font-size: 16px;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 1;
   margin: 0%;
   width: 104px;
   height: 16px;
@@ -40,6 +40,6 @@
     font-family: "Poppins", "noto-sans", sans-serif;
     font-size: 16px;
     font-weight: 400;
-    line-height: 16px;
+    line-height: 1;
   }
 }
