--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -25,7 +25,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   max-width: 420px;
 }
@@ -77,7 +77,7 @@
   border: none;
   font-size: 16px;
   font-weight: 500;
-  line-height: 16px;
+  line-height: 1;
   align-self: flex-end;
   margin-left: auto;
   margin-bottom: 20px;
@@ -100,7 +100,6 @@
     height: 274px;
     display: flex;
     flex-direction: column;
-    max-width: 288px;
     align-items: center;
     text-align: center;
     padding-top: 20px;
