--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,4 @@
 .cards {
-  padding-top: 20px;
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
@@ -7,12 +6,11 @@
 
 .cards__list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 413px);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(413px, 1fr));
   margin: 0;
-  padding: 0;
+  padding: 20px 0 36px 0;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
-  gap: 40px 20px;
+  gap: 20px;
 }
 
 @media screen and (max-width: 627px) {
@@ -26,7 +24,7 @@
 
   .cards__list {
     margin: auto;
-    padding: 0;
+    padding: 20px 0;
     width: 288px;
     display: flex;
     flex-direction: column;
