--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -12,12 +12,11 @@
 .footer__content {
   font-family: "Poppins", "noto-sans", sans-serif;
   color: rgba(33, 33, 33, 70%);
-  padding: 60px 668px;
+  padding: 60px 0;
   font-size: 16px;
   font-weight: 400;
   line-height: 1;
   margin: 0%;
-  width: 104px;
   height: 16px;
 }
 
