--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,7 +2,7 @@
   display: flex;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 0 20px 0;
+  padding: 40px 0 0;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
   opacity: 40;
 }
@@ -27,7 +27,8 @@
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
-  max-width: 420px;
+  max-width: 240px;
+  white-space: nowrap;
 }
 
 .profile__description {
@@ -63,6 +64,11 @@
   border-radius: 90px 0px 0px 0px;
   opacity: 0.7px;
   padding-top: 112px;
+  cursor: pointer;
+}
+
+.profile__edit-btn:hover {
+  color: #212121;
 }
 
 .profile__add-btn {
@@ -81,11 +87,18 @@
   align-self: flex-end;
   margin-left: auto;
   margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.profile__add-btn:hover {
+  background-color: #212121cc;
+  opacity: 80%;
 }
 
 .profile__pencil {
   height: 13px;
   margin-right: 8px;
+  color: rgba(33, 33, 33, 70%);
 }
 
 .profile__add-icon {
@@ -102,7 +115,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding-top: 20px;
+    padding: 20px 0 0;
     font-family: "Poppins", "noto-sans", sans-serif;
   }
 
@@ -162,7 +175,8 @@
     justify-content: center;
     height: 16px;
     width: 107px;
-    padding-top: 32px;
+    padding: 32px 0 20px;
+    margin: 0;
   }
 
   .profile__pencil {
@@ -170,7 +184,7 @@
   }
 
   .profile__add-btn {
-    margin-bottom: 20px;
     width: 100%;
+    margin: 0;
   }
 }
