--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -14,7 +14,7 @@
   gap: 20px;
 }
 
-@media screen (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .cards__list {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, auto);
