--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,7 +1,7 @@
 .page {
   background-color: #fcf5e5;
   min-height: 100vh;
-  font-family: "poppins", "noto-sans", sans-serif;
+  font-family: "Poppins", "noto-sans", sans-serif;
   padding: 0 10px;
 }
 
@@ -13,7 +13,7 @@
   .page {
     background-color: #fcf5e5;
     min-height: 100vh;
-    font-family: "poppins", "noto-sans", sans-serif;
+    font-family: "Poppins", "noto-sans", sans-serif;
     padding: 0 10px;
     width: 320px;
     height: 2524px;
