--- a/blocks/card.css
+++ b/blocks/card.css
@@ -21,7 +21,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 24px;
+  min-height: 24px;
 }
 
 .card__title {
@@ -36,6 +36,7 @@
   overflow: hidden;
   margin: 0;
   padding: 0%;
+  max-width: 350px;
 }
 
 .card__like-button {
@@ -49,7 +50,7 @@
 }
 
 .card__like-button:hover {
-  color: #212121;
+  opacity: 1;
 }
 
 @media screen and (max-width: 627px) {
@@ -60,13 +61,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 228px;
+    width: 100%;
   }
 
   .card__content {
     width: 100%;
-    height: 16px;
-    display: flex;
+    min-height: 16px;
     justify-content: space-between;
     list-style-type: none;
     margin: auto;
@@ -95,7 +95,7 @@
     text-align: left;
     padding: 0;
     width: 95px;
-    height: 16px;
+    max-width: 250px;
   }
 
   .card__like-button {
