--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -35,7 +35,7 @@
     grid-template-rows: repeat(6, auto);
     margin: auto;
     padding: 20px 0;
-    width: 288px;
+    max-width: 288px;
     display: flex;
     flex-direction: column;
     justify-content: center;
