--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -17,7 +17,6 @@
   font-weight: 400;
   line-height: 1;
   margin: 0%;
-  height: 16px;
 }
 
 @media screen and (max-width: 627px) {
@@ -34,8 +33,7 @@
   .footer__content {
     padding: 0;
     text-align: center;
-    width: 104px;
-    height: 16px;
+    max-width: 104px;
     font-family: "Poppins", "noto-sans", sans-serif;
     font-size: 16px;
     font-weight: 400;
