--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -4,7 +4,6 @@
   margin: 0 auto;
   padding: 40px 0 0;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
-  opacity: 40;
 }
 
 .profile__avatar {
@@ -12,6 +11,7 @@
   height: 190px;
   width: 190px;
   margin-bottom: 20px;
+  object-fit: cover;
 }
 
 .profile__name {
@@ -25,18 +25,15 @@
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  max-width: 240px;
-  white-space: nowrap;
+  max-width: 420px;
 }
 
 .profile__description {
   margin: 0;
   font-family: "Poppins", "noto-sans", sans-serif;
   line-height: 1;
-  width: 110px;
-  height: 18px;
   font-weight: bold;
   color: rgba(33, 33, 33, 70%);
   font-size: 16px;
@@ -62,13 +59,13 @@
   width: 100px;
   gap: 8px;
   border-radius: 90px 0px 0px 0px;
-  opacity: 0.7px;
+  opacity: 0.7;
   padding-top: 112px;
   cursor: pointer;
 }
 
 .profile__edit-btn:hover {
-  color: #212121;
+  opacity: 1;
 }
 
 .profile__add-btn {
@@ -91,7 +88,6 @@
 }
 
 .profile__add-btn:hover {
-  background-color: #212121cc;
   opacity: 80%;
 }
 
@@ -109,8 +105,7 @@
 
 @media screen and (max-width: 627px) {
   .profile {
-    width: 288px;
-    height: 274px;
+    max-width: 288px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -141,8 +136,7 @@
 
   .profile__name {
     font-size: 20px;
-    width: 288px;
-    height: 20px;
+    max-width: 288px;
     margin: 0;
     padding-top: 12px;
     text-align: center;
@@ -151,8 +145,6 @@
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
-    width: 288px;
-    height: 20px;
   }
 
   .profile__description {
@@ -173,7 +165,6 @@
     align-items: center;
     text-align: center;
     justify-content: center;
-    height: 16px;
     width: 107px;
     padding: 32px 0 20px;
     margin: 0;
