--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -12,6 +12,7 @@
   width: 190px;
   margin-bottom: 20px;
   object-fit: cover;
+  border-radius: 8px;
 }
 
 .profile__name {
@@ -116,14 +117,12 @@
 
   .profile__avatar {
     margin-right: 0%;
-    height: 80px;
-    width: 80px;
+    min-height: 80px;
     margin: 0;
     align-self: center;
     display: flex;
     flex-direction: column;
-    width: 80px;
-    height: 80px;
+    max-width: 80px;
   }
 
   .profile__column {
@@ -140,24 +139,13 @@
     margin: 0;
     padding-top: 12px;
     text-align: center;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
   }
 
   .profile__description {
-    margin: 0;
     text-align: center;
     padding-top: 6px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
     max-width: 288px;
-    height: 16px;
+    min-height: 16px;
   }
 
   .profile__edit-btn {
@@ -165,7 +153,7 @@
     align-items: center;
     text-align: center;
     justify-content: center;
-    width: 107px;
+    width: 100%;
     padding: 32px 0 20px;
     margin: 0;
   }
