--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,11 +1,10 @@
 .card {
   background-color: #f8f9fa;
-  border-radius: 8px;
   overflow: hidden;
   max-width: 413px;
 }
 
-.card-img {
+.card__img {
   width: 100%;
   height: 413px;
   object-fit: cover;
@@ -59,7 +58,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
   }
 
   .card__content {
@@ -74,12 +72,11 @@
     text-align: left;
   }
 
-  .card-img {
-    min-width: 228px;
-    max-width: 228px;
-    padding: 0;
+  .card__img {
+    width: 228px;
     margin: 0;
     background-color: #f8f9fa;
+    height: 288px;
   }
 
   .card__title {
