--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,7 +2,7 @@
   display: flex;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 40px 0 0;
+  padding: 40px 0 20px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
@@ -111,18 +111,18 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 20px 0 0;
+    padding: 20px 0;
     font-family: "Poppins", "noto-sans", sans-serif;
   }
 
   .profile__avatar {
     margin-right: 0%;
-    min-height: 80px;
+    height: 80px;
     margin: 0;
     align-self: center;
     display: flex;
     flex-direction: column;
-    max-width: 80px;
+    width: 80px;
   }
 
   .profile__column {
