--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -176,3 +176,61 @@
     margin: 0;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .profile {
+    width: 288px;
+    height: 274px;
+    top: 66px;
+    left: 16px;
+    padding: 0px 0px 20px 0px;
+    gap: 32px;
+    border: 0px 0px 1px 0px;
+  }
+
+  .profile__avatar {
+    width: 80px;
+    height: 80px;
+  }
+
+  .profile__name {
+    width: 288px;
+    height: 20px;
+    font-family: "Poppins", "noto-sans", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: center;
+  }
+
+  .profile__description {
+    width: 288px;
+    height: 16px;
+    font-family: "Poppins", "noto-sans", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+    text-align: center;
+  }
+
+  .profile__edit-btn {
+    width: 107px;
+    height: 16px;
+    gap: 8px;
+    border-radius: 90px 0px 0px 0px;
+    opacity: 0.7px;
+  }
+
+  .profile__add-btn {
+    width: 288px;
+    height: 52px;
+    padding: 18px 32px 18px 32px;
+    gap: 8px;
+    border-radius: 8px 0px 0px 0px;
+    font-family: "Poppins", "noto-sans", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+    text-align: left;
+  }
+}
