--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -180,12 +180,11 @@
 @media screen and (max-width: 320px) {
   .profile {
     width: 288px;
-    height: 274px;
-    top: 66px;
-    left: 16px;
-    padding: 0px 0px 20px 0px;
-    gap: 32px;
-    border: 0px 0px 1px 0px;
+    height: 247px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   .profile__avatar {
