--- a/blocks/page.css
+++ b/blocks/page.css
@@ -16,3 +16,10 @@
     max-width: 320px;
   }
 }
+
+@media screen and(max-width: 320px) {
+  .page {
+    width: 320px;
+    height: 2524px;
+  }
+}
