--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -185,6 +185,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0;
   }
 
   .profile__avatar {
@@ -200,6 +201,13 @@
     font-weight: 500;
     line-height: 20px;
     text-align: center;
+    text-overflow: clip;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    width: 230px;
+    height: 20px;
   }
 
   .profile__description {
@@ -210,6 +218,13 @@
     font-weight: 500;
     line-height: 16px;
     text-align: center;
+    text-overflow: clip;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    width: 125px;
+    height: 16px;
   }
 
   .profile__edit-btn {
@@ -225,7 +240,7 @@
     height: 52px;
     padding: 18px 32px 18px 32px;
     gap: 8px;
-    border-radius: 8px 0px 0px 0px;
+    border-radius: 8px;
     font-family: "Poppins", "noto-sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
