--- a/blocks/page.css
+++ b/blocks/page.css
@@ -13,7 +13,7 @@
     background-color: #fcf5e5;
     min-height: 100vh;
     font-family: "Poppins", "noto-sans", sans-serif;
-    max-width: 320px;
+    width: 627px;
   }
 }
 
