--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -3,7 +3,7 @@
   max-width: 1280px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
   margin-top: 34px;
-  justify: space-between;
+  justify-content: space-between;
 }
 
 .profile__avatar {
@@ -106,7 +106,6 @@
 
 @media screen and (max-width: 627px) {
   .profile {
-    display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
