--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -6,18 +6,18 @@
 
 .cards__list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, auto);
+  grid-template-columns: repeat(auto-fit, 413px);
   margin: 0;
   padding: 20px 0 36px 0;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
   gap: 40px 20px;
+  justify-content: center;
 }
 
 @media screen and (max-width: 627px) {
   .cards__list {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, 288px);
     grid-template-rows: repeat(3, auto);
   }
 }
@@ -25,5 +25,6 @@
   .cards__list {
     display: flex;
     flex-direction: column;
+    gap: 20px;
   }
 }
