--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -28,6 +28,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  min-height: 100px;
 }
 
 .profile__description {
