--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -126,6 +126,11 @@
 @media screen and (max-width: 320px) {
   .profile {
     gap: 0;
+    padding-top: 0;
+  }
+
+  .profile__avatar {
+    padding: 0 0 20px 0;
   }
 
   .profile__add-btn {
