--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -17,7 +17,7 @@
 @media screen and (max-width: 627px) {
   .cards__list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 288px);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 @media screen and (max-width: 320px) {
