--- a/blocks/card.css
+++ b/blocks/card.css
@@ -54,12 +54,12 @@
 
 @media screen and (max-width: 627px) {
   .card__img {
-    max-width: 288px;
-    min-height: 288px;
+    width: 288px;
+    height: 288px;
   }
 
   .card__title {
     max-width: 250px;
-    font-weight: 16px;
+    font-size: 16px;
   }
 }
