Form media query final edit

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,6 +10,11 @@
   align-items: center;
   justify-content: center;
   font-family: "Poppins", "noto-sans", sans-serif;
+  padding: 0 20px;
+}
+
+.modal:hover {
+  visibility: visible;
 }
 
 .modal__container {
@@ -85,4 +90,37 @@
 
 .modal__submit-btn:hover {
   background-color: rgba(33, 33, 33, 0.8);
+}
+
+@media screen and (max-width: 627px) {
+  .modal {
+    padding: 0 10px;
+  }
+
+  .modal__container {
+    padding: 12px;
+  }
+
+  .modal__title {
+    margin: 4px 0 34px;
+    font-size: 20px;
+  }
+
+  .modal__close-btn {
+    top: 12px;
+    right: 12px;
+  }
+
+  .modal__input {
+    font-size: 16px;
+  }
+
+  .modal__label {
+    font-size: 16px;
+    margin-bottom: 24px;
+  }
+
+  .modal__submit-btn {
+    width: 100%;
+  }
 }
