--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,9 +11,10 @@
   justify-content: center;
   font-family: "Poppins", "noto-sans", sans-serif;
   padding: 0 20px;
+  visibility: hidden;
 }
 
-.modal:hover {
+.modal:opened {
   visibility: visible;
 }
 
