--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -26,6 +26,46 @@
   position: relative;
   box-sizing: border-box;
   border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.modal__container_preview {
+  padding: 0%;
+  margin: 0%;
+}
+
+.modal__image {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+  max-height: 80vh;
+}
+
+.modal__caption {
+  position: fixed;
+  text-align: left;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.modal__caption_preview {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  font-size: 16px;
+  color: white;
+  text-align: left;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 10px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0;
 }
 
 .modal__close-btn {
@@ -39,6 +79,14 @@
   border: none;
   opacity: 40%;
   cursor: pointer;
+}
+
+.modal__close-btn_preview {
+  background-image: url(../images/close\ icon.svg);
+  top: 0%;
+  right: -45px;
+  opacity: 1;
+  background-color: transparent;
 }
 
 .modal__close-btn:hover {
