--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,3 +1,22 @@
+/* Keyframes for fade-in and fade-out animations */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 .modal {
   position: fixed;
   top: 0;
@@ -12,10 +31,15 @@
   font-family: "Poppins", "noto-sans", sans-serif;
   padding: 0 20px;
   visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.3s, opacity 0.3s;
 }
 
 .modal.modal_opened {
   visibility: visible;
+  opacity: 1;
+  transition: visibility 0s linear 0s, opacity 0.3s;
+  animation: fadeIn 0.3s ease-in;
 }
 
 .modal__container {
@@ -28,7 +52,6 @@
   border-radius: 8px;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-direction: column;
 }
 
@@ -37,7 +60,7 @@
   margin: 0%;
 }
 
-.modal__image {
+.modal__image_preview {
   width: 100%;
   object-fit: cover;
   border-radius: 8px;
@@ -53,9 +76,9 @@
 }
 
 .modal__caption_preview {
-  position: relative;
-  bottom: 0;
+  position: absolute;
   left: 0;
+  top: calc(100% + 10px);
   font-size: 16px;
   color: white;
   text-align: left;
