--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -195,7 +195,7 @@
 
   .modal__close-btn_preview {
     top: -45px;
-    right: -3px;
+    right: -10px;
   }
 
   .modal__input {
@@ -219,6 +219,14 @@
     margin: 0%;
   }
 
+  .modal__image_preview {
+    width: 288px;
+    height: 426.57px;
+    top: 89px;
+    left: 16px;
+    border-radius: 8px;
+  }
+
   .modal__caption_preview {
     font-size: 16px;
   }
@@ -228,7 +236,6 @@
     height: 40px;
     position: absolute;
     top: -40px;
-    right: -10px;
     border: none;
     background-color: transparent;
     cursor: pointer;
