--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -224,9 +224,9 @@
   }
 
   .modal__image_preview {
-    width: 106%;
+    width: 288px;
     height: 426px;
-    left: -10px;
+    left: 5px;
     border-radius: 8px;
     position: relative;
   }
@@ -236,14 +236,14 @@
     width: 111;
     height: 27;
     top: 440px;
-    left: -10px;
+    left: 5px;
     padding: 10px;
   }
 
   .modal__close-btn_preview {
     width: 40;
     height: 40;
-    left: 264px;
+    left: 255px;
   }
 
   .modal__close-btn {
