--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -91,6 +91,21 @@
   margin: 0;
 }
 
+.modal__error {
+  display: none;
+  color: rgba(255, 0, 0, 0.7);
+  width: 630px;
+  height: 18px;
+  font-family: "Poppins", "noto-sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 110%;
+}
+
+.modal__error_visible {
+  display: block;
+}
+
 .modal__close-btn {
   position: absolute;
   top: 32px;
