--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -92,7 +92,7 @@
 }
 
 .modal__error {
-  display: none;
+  display: block;
   color: rgba(255, 0, 0, 0.7);
   width: 630px;
   height: 18px;
@@ -100,6 +100,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 110%;
+  margin-bottom: 32px;
 }
 
 .modal__error_visible {
@@ -142,8 +143,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin-bottom: 32px;
-  font-family: Poppins;
+  font-family: "Poppins", "noto-sans", sans-serif;
   font-size: 16px;
   font-weight: 500;
   color: rgba(33, 33, 33, 0.7);
@@ -157,9 +157,19 @@
   border-radius: 8px;
   border: 1px solid;
   opacity: 0.5;
+  border-color: rgba(33, 33, 33, 0.4);
 }
 
 .modal__input:hover {
+  opacity: 1;
+}
+
+.modal__input_type_error {
+  border-color: rgba(255, 0, 0, 0.7);
+}
+
+.modal__input_type_error:hover {
+  border-color: rgba(255, 0, 0, 0.7);
   opacity: 1;
 }
 
