--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -14,6 +14,24 @@
   margin: 0 20px 20px 0;
 }
 
+.profile__avatar-edit {
+  object-fit: cover;
+  border-radius: 8px;
+  width: 190px;
+  height: 190px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-family: "Poppins", "noto-sans", sans-serif;
+  color: rgba(255, 255, 255, 1);
+  position: absolute;
+  top: 150px;
+  font-size: 16px;
+}
+
+.profile__avatar-edit:hover {
+  opacity: 1;
+}
 .profile__name {
   margin: 0 0 13px;
   font-family: "Poppins", "noto-sans", sans-serif;
@@ -70,7 +88,6 @@
   width: 110px;
   height: 16px;
   gap: 8px;
-  border-radius: 90px 0px 0px 0px;
   padding: 113px 0 20px 0;
   opacity: 0.7;
 }
@@ -125,6 +142,12 @@
     text-align: center;
     padding: 20px 0;
   }
+  .profile__avatar-edit {
+    width: 150px;
+    top: 172px;
+    font-size: 14px;
+    left: 226px;
+  }
 
   .profile__edit-btn {
     margin-bottom: 20px;
@@ -147,6 +170,15 @@
     margin: 0 0 12px 0;
     width: 80px;
     height: 80px;
+  }
+  .profile__avatar-edit {
+    width: 25px;
+    height: 25px;
+    top: 115px;
+    font-size: 0px;
+    background: rgba(33, 33, 33, 0.4);
+    position: absolute;
+    left: 170px;
   }
 
   .profile__add-btn {
