--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -32,17 +32,13 @@
   padding: 0 20px;
   visibility: hidden;
   opacity: 0;
-  transition:
-    visibility 0s linear 0.3s,
-    opacity 0.3s;
+  transition: visibility 0s linear 0.3s, opacity 0.3s;
 }
 
 .modal.modal_opened {
   visibility: visible;
   opacity: 1;
-  transition:
-    visibility 0s linear 0s,
-    opacity 0.3s;
+  transition: visibility 0s linear 0s, opacity 0.3s;
   animation: fadeIn 0.3s ease-in;
 }
 
@@ -301,7 +297,7 @@
   font-size: 24px;
 }
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 628px) {
   .modal {
     padding: 0 10px;
   }
@@ -349,7 +345,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 321px) {
   .modal {
     background: rgba(0, 0, 0, 0.9);
   }
@@ -370,16 +366,16 @@
 
   .modal__caption_preview {
     font-size: 16px;
-    width: 111;
-    height: 27;
+    width: 111px;
+    height: 27px;
     top: 440px;
     left: 5px;
     padding: 10px;
   }
 
   .modal__close-btn_preview {
-    width: 40;
-    height: 40;
+    width: 40px;
+    height: 40px;
     left: 255px;
   }
 
