--- a/src/blocks/footer.css
+++ b/src/blocks/footer.css
@@ -17,3 +17,10 @@
   line-height: 1;
   margin: 0%;
 }
+
+@media screen and (max-width: 627px) {
+  .footer__content {
+    font-size: 13px;
+    padding: 0 24px;
+  }
+}
