--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -10,3 +10,14 @@
   width: 94px;
   height: 26px;
 }
+
+@media screen and (max-width: 627px) {
+  .header {
+    padding: 12px 0;
+  }
+
+  .header__logo {
+    width: 70px;
+    height: 20px;
+  }
+}
