--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -81,15 +81,16 @@
 
 .profile__edit-btn {
   color: #212121;
-  font-family: "Poppins", "noto-sans", sans-serif;
+  font-family: "Poppins", sans-serif;
   border: none;
   background-color: #fcf5e5;
   cursor: pointer;
   width: 110px;
   height: 16px;
   gap: 8px;
-  padding: 113px 0 20px 0;
+  padding: 12px 0;
   opacity: 0.7;
+  margin-top: 112px;
 }
 
 .profile__edit-btn:hover {
@@ -99,11 +100,7 @@
 .profile__add-btn {
   background-color: #000;
   color: #fcf5e5;
-  font-family: "Poppins", "noto-sans", sans-serif;
-  line-height: 1;
-  font-size: 18px;
-  border: none;
-  align-self: flex-end;
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1;
@@ -111,7 +108,7 @@
   margin-bottom: 20px;
   cursor: pointer;
   height: 52px;
-  padding: 18px 32px 18px 32px;
+  padding: 18px 32px;
   gap: 8px;
   border-radius: 8px;
   display: flex;
@@ -119,7 +116,6 @@
   justify-content: center;
   flex-direction: row;
 }
-
 .profile__add-btn:hover {
   opacity: 80%;
 }
